backend/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: digitalprof-backend
  labels:
    app: digitalprof-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: digitalprof-backend
  template:
    metadata:
      labels:
        app: digitalprof-backend
    spec:
      containers:
        - name: digitalprof-backend
          image: dockerbayron/demo_digitalprof:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 5
